[API GWs] Add "Duplicate" action

--- a/src/igz_controls/components/duplicate-dialog/duplicate-dialog.less
+++ b/src/igz_controls/components/duplicate-dialog/duplicate-dialog.less
@@ -1,16 +1,16 @@
-.duplicate-function-dialog-wrapper {
+.duplicate-dialog-wrapper {
     .main-content {
         .field-group {
             display: flex;
             flex-wrap: wrap;
             width: 450px;
 
-            .field-label.function-name-label,
-            .field-input.function-name-input {
+            .field-label.name-label,
+            .field-input.name-input {
                 width: 100%;
             }
 
-            .field-input.function-name-input {
+            .field-input.name-input {
                 .error {
                     top: 38px;
                 }
