--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -56,6 +56,10 @@
                 width: 65%;
                 margin-left: 15px;
             }
+
+            .slider {
+                width: 63%;
+            }
         }
     }
 }
