--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
@@ -1,4 +1,5 @@
 .ncl-function-collapsing-row {
+  .ncl-function-table-row-color-set();
     background-color: @white;
     margin-bottom: 8px;
 
@@ -35,6 +36,19 @@
                     .duskThree(0.64);
                     color: @color;
                 }
+
+                .version-text {
+                    display: block;
+                    color: @table-cell-version-color;
+                    font-size: 12px;
+                    text-align: left;
+                }
+
+                .ncl-icon-api-gateway {
+                    font-size: 20px;
+                    position: absolute;
+                    right: 10px;
+                }
             }
         }
 
@@ -55,7 +69,9 @@
         }
 
         .function-name {
+            display: block;
             font-weight: bold;
+            width: 90%;
         }
 
         .function-status {
