Impl [igzValidatingInputField] Refactor component to use ngModel
Also:
- `igzValidatingInputField`: Remove `on-blur` attribute which was
  redundant (there is already an `item-blur-callback` attribute).
- Nuclio function triggers:
  - All kinds: add a red asterisk to mark mandatory fields.
  - For HTTP annotations and Cron event handlers: [bugfix] Key field
    was not mandatory, now it is.
- `FormValidationService`: add `validateAllFields` method to validate
  all immediate and nested fields of a form (`ngForm`).
- Use `ngForm.$setSubmitted()` and `ngForm.$setPristine()` instead of
  `ngForm.$submitted = true/false`.
- Nuclio: Remove unnecessary border color change on hovering input
  fields.
- Better use `jQuery` where it is already there, instead of DOM APIs
  (offset position, dimensions, $document, ...).

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -75,30 +75,24 @@
         position: relative;
         width: 100%;
         z-index: 2;
+        outline: transparent none 0;
+        box-shadow: none;
 
         &:not([disabled]):not([readonly]) {
-            &:focus.ng-invalid:not(.ng-pristine), &.ng-invalid.ng-touched {
-                background-color: @input-textarea-field-not-disabled-focus-invalid-bg-color;
-                border: @input-textarea-field-not-disabled-focus-invalid-border;
-                box-shadow: none;
-                outline: none;
-            }
-
             &:focus {
-                outline: 0;
                 border: @input-textarea-field-not-disabled-hover-focus-border;
             }
 
-            &.invalid {
-                background-color: @input-textarea-field-not-disabled-invalid-bg-color;
-                border: @input-textarea-field-not-disabled-invalid-border;
-                box-shadow: none;
-            }
+            &.ng-invalid.ng-dirty, &.invalid.ng-dirty {
+                &:focus {
+                    background-color: @input-textarea-field-not-disabled-focus-invalid-bg-color;
+                    border: @input-textarea-field-not-disabled-focus-invalid-border;
+                }
 
-            &:focus.ng-valid, &:focus.ng-pristine {
-                border: @input-textarea-field-not-disabled-valid-border;
-                box-shadow: none;
-                outline: none;
+                &:not(:focus) {
+                    background-color: @input-textarea-field-not-disabled-invalid-bg-color;
+                    border: @input-textarea-field-not-disabled-invalid-border;
+                }
             }
         }
     }
@@ -263,6 +257,27 @@
 
         .textarea-field {
             padding: 7px 30px 6px 10px;
+        }
+    }
+}
+
+// an invalid input field should be displayed as invalid in case it is in a submitted form even if the field is pristine
+form.ng-submitted .validating-input-field {
+    .validating-input-field-color-set();
+
+    .input-field, .textarea-field {
+        &:not([disabled]):not([readonly]) {
+            &.ng-invalid, &.invalid {
+                &:focus {
+                    background-color: @input-textarea-field-not-disabled-focus-invalid-bg-color;
+                    border: @input-textarea-field-not-disabled-focus-invalid-border;
+                }
+
+                &:not(:focus) {
+                    background-color: @input-textarea-field-not-disabled-invalid-bg-color;
+                    border: @input-textarea-field-not-disabled-invalid-border;
+                }
+            }
         }
     }
 }
