--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -4,8 +4,7 @@
           autocomplete="off">
         <div class="igz-row title-field-row">
             <div class="igz-col-20 name-field">
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemName"
                                             data-input-value="$ctrl.getInputValue()"
                                             data-is-focused="true"
@@ -51,9 +50,10 @@
             </div>
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.url)">
-                <div class="field-label">{{ 'common:URL' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <div class="field-label">
+                    <span class="asterisk">{{ 'common:URL' | i18next }}</span>
+                </div>
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemURL"
                                             data-input-value="$ctrl.item.url"
                                             data-is-focused="false"
@@ -69,13 +69,12 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volumeMount.mountPath)">
                 <div class="field-label">
-                    <span>{{ 'functions:MOUNT_PATH' | i18next }}</span>
+                    <span class="asterisk">{{ 'functions:MOUNT_PATH' | i18next }}</span>
                     <igz-more-info data-description="{{ 'functions:MOUNT_PATH_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemPath"
                                             data-input-value="$ctrl.item.volumeMount.mountPath"
                                             data-is-focused="false"
@@ -92,13 +91,12 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.accessKey)">
                 <div class="field-label">
-                    <span>{{ 'functions:ACCESS_KEY' | i18next }}</span>
+                    <span class="asterisk">{{ 'functions:ACCESS_KEY' | i18next }}</span>
                     <igz-more-info data-description="{{ 'functions:ACCESS_KEY_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="password"
+                <igz-validating-input-field data-field-type="password"
                                             data-auto-complete="current-password"
                                             data-input-name="secretRef"
                                             data-input-value="$ctrl.item.volume.flexVolume.options.accessKey"
@@ -115,13 +113,12 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.container)">
                 <div class="field-label">
-                    <span>{{ 'functions:CONTAINER_NAME' | i18next }}</span>
+                    <span class="asterisk">{{ 'functions:CONTAINER_NAME' | i18next }}</span>
                     <igz-more-info data-description="{{ 'functions:CONTAINER_NAME_DESCRIPTION' | i18next }}"
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="containerName"
                                             data-input-value="$ctrl.item.volume.flexVolume.options.container"
                                             data-is-focused="false"
@@ -142,8 +139,7 @@
                                    data-trigger="click">
                     </igz-more-info>
                 </div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="containerSubPath"
                                             data-input-value="$ctrl.item.volume.flexVolume.options.subPath"
                                             data-is-focused="false"
@@ -159,9 +155,10 @@
 
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.hostPath.path)">
-                <div class="field-label">{{ 'functions:HOST_PATH' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <div class="field-label">
+                    <span class="asterisk">{{ 'functions:HOST_PATH' | i18next }}</span>
+                </div>
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="hostPath"
                                             data-input-value="$ctrl.item.volume.hostPath.path"
                                             data-is-focused="false"
@@ -175,9 +172,10 @@
 
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.secret.secretName)">
-                <div class="field-label">{{ 'functions:SECRET_NAME' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <div class="field-label">
+                    <span class="asterisk">{{ 'functions:SECRET_NAME' | i18next }}</span>
+                </div>
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="secretName"
                                             data-input-value="$ctrl.item.volume.secret.secretName"
                                             data-is-focused="false"
@@ -191,9 +189,10 @@
 
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.configMap.name)">
-                <div class="field-label">{{ 'functions:CONFIG_MAP_NAME' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <div class="field-label">
+                    <span class="asterisk">{{ 'functions:CONFIG_MAP_NAME' | i18next }}</span>
+                </div>
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="configMap"
                                             data-input-value="$ctrl.item.volume.configMap.name"
                                             data-is-focused="false"
@@ -207,9 +206,10 @@
 
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.persistentVolumeClaim.claimName)">
-                <div class="field-label text-ellipsis">{{ 'functions:PERSISTENT_VOLUME_CLAIM_NAME' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <div class="field-label text-ellipsis">
+                    <span class="asterisk">{{ 'functions:PERSISTENT_VOLUME_CLAIM_NAME' | i18next }}</span>
+                </div>
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="persistentVolumeClaim"
                                             data-input-value="$ctrl.item.volume.persistentVolumeClaim.claimName"
                                             data-form-object="$ctrl.editItemForm"
@@ -222,7 +222,9 @@
 
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.maxWorkers)">
-                <div class="field-label">{{ 'functions:MAX_WORKERS' | i18next }}</div>
+                <div class="field-label">
+                    <span data-ng-class="{asterisk: !$ctrl.selectedClass.maxWorkers.allowEmpty}">{{ 'functions:MAX_WORKERS' | i18next }}</span>
+                </div>
                 <igz-number-input data-form-object="$ctrl.editItemForm"
                                   data-input-name="{{$ctrl.selectedClass.maxWorkers.name}}"
                                   data-current-value="$ctrl.item.maxWorkers"
@@ -240,7 +242,9 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.workerAvailabilityTimeoutMilliseconds)">
                 <div class="field-label">
-                    <span>{{ 'functions:WORKER_AVAILABILITY_TIMEOUT_MILLISECONDS' | i18next }}</span>
+                    <span data-ng-class="{
+                        asterisk: !$ctrl.selectedClass.workerAvailabilityTimeoutMilliseconds.allowEmpty
+                    }">{{ 'functions:WORKER_AVAILABILITY_TIMEOUT_MILLISECONDS' | i18next }}</span>
                     <igz-more-info data-description="{{ $ctrl.getWorkerAvailabilityTimeoutMillisecondsDescription() }}"
                                    data-trigger="click">
                     </igz-more-info>
@@ -263,9 +267,10 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && attribute.type === 'input' && attribute.name !== 'schedule'"
                  data-ng-repeat="attribute in $ctrl.selectedClass.attributes">
-                <div class="field-label">{{$ctrl.convertFromCamelCase(attribute.name)}}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="{{attribute.fieldType}}"
+                <div class="field-label">
+                    <span data-ng-class="{asterisk: !attribute.allowEmpty}">{{$ctrl.convertFromCamelCase(attribute.name)}}</span>
+                </div>
+                <igz-validating-input-field data-field-type="{{attribute.fieldType}}"
                                             data-input-name="item_{{attribute.name}}"
                                             data-input-value="$ctrl.getAttrValue(attribute.name)"
                                             data-is-focused="false"
@@ -297,7 +302,9 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && attribute.type === 'number-input'"
                  data-ng-repeat="attribute in $ctrl.selectedClass.attributes">
-                <div class="field-label">{{$ctrl.convertFromCamelCase(attribute.name)}}</div>
+                <div class="field-label">
+                    <span data-ng-class="{asterisk: !attribute.allowEmpty}">{{$ctrl.convertFromCamelCase(attribute.name)}}</span>
+                </div>
                 <igz-number-input data-form-object="$ctrl.editItemForm"
                                   data-input-name="{{attribute.name}}"
                                   data-current-value="$ctrl.getAttrValue(attribute.name)"
@@ -316,8 +323,7 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.username)">
                 <div class="field-label">{{ 'common:USERNAME' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="username"
                                             data-input-value="$ctrl.item.username"
                                             data-is-focused="false"
@@ -332,8 +338,7 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.password)">
                 <div class="field-label">{{ 'common:PASSWORD' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="password"
+                <igz-validating-input-field data-field-type="password"
                                             data-input-name="password"
                                             data-input-value="$ctrl.item.password"
                                             data-is-focused="false"
@@ -360,8 +365,7 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.attributes.sasl.user)">
                 <div class="field-label">{{ 'functions:SASL_USERNAME' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemSASLUsername"
                                             data-input-value="$ctrl.item.attributes.sasl.user"
                                             data-is-focused="false"
@@ -376,8 +380,7 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.attributes.sasl.password)">
                 <div class="field-label">{{ 'functions:SASL_PASSWORD' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemSASLPassword"
                                             data-input-value="$ctrl.item.attributes.sasl.password"
                                             data-is-focused="false"
@@ -392,8 +395,7 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.attributes.event.body)">
                 <div class="field-label">{{ 'functions:EVENT_BODY' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="eventBody"
                                             data-input-value="$ctrl.item.attributes.event.body"
                                             data-is-focused="false"
@@ -460,7 +462,6 @@
                         <ncl-key-value-input class="new-label-input"
                                              data-list-class="scrollable-annotations"
                                              data-change-state-broadcast="change-state-deploy-button"
-                                             data-key-optional="true"
                                              data-row-data="annotation"
                                              data-use-type="false"
                                              data-submit-on-fly="true"
@@ -481,7 +482,9 @@
             <div class="igz-col-91 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && $ctrl.isCronTrigger()">
 
-                <div class="field-label">{{ 'common:SCHEDULE' | i18next }}</div>
+                <div class="field-label">
+                    <span class="asterisk">{{ 'common:SCHEDULE' | i18next }}</span>
+                </div>
 
                 <div class="schedule-input-wrapper">
                     <igz-validating-input-field data-field-type="schedule"
@@ -516,7 +519,6 @@
                         <ncl-key-value-input class="new-label-input"
                                              data-list-class="scrollable-event-headers"
                                              data-change-state-broadcast="change-state-deploy-button"
-                                             data-key-optional="true"
                                              data-row-data="header"
                                              data-use-type="false"
                                              data-submit-on-fly="true"
@@ -629,8 +631,7 @@
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && $ctrl.isTriggerType()">
                 <div class="field-label">{{ 'functions:WORKER_ALLOCATOR_NAME' | i18next }}</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemWorkerAllocatorName"
                                             data-input-value="$ctrl.item.workerAllocatorName"
                                             data-is-focused="false"
