--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -13,10 +13,10 @@
             <div class="input-container input-key-wrapper"
                  data-ng-if="!$ctrl.onlyValueInput"
                  data-ng-class="{'use-type': $ctrl.useType, 'all-value-types': $ctrl.allValueTypes}">
-                <label class="key-label" data-ng-if="$ctrl.useLabels">
+                <label class="key-label asterisk" data-ng-if="$ctrl.useLabels">
                     {{ 'common:KEY' | i18next }}:
                 </label>
-                <igz-validating-input-field class="nuclio-validating-input input-key"
+                <igz-validating-input-field class="input-key"
                                             data-ng-if="!$ctrl.keyList"
                                             data-field-type="input"
                                             data-input-name="key"
@@ -34,7 +34,7 @@
                                             data-tooltip-placement="bottom"
                                             data-tooltip-popup-delay="100">
                 </igz-validating-input-field>
-                <igz-default-dropdown class="nuclio-validating-input input-key"
+                <igz-default-dropdown class="input-key"
                                       data-ng-if="$ctrl.keyList"
                                       data-form-object="$ctrl.keyValueInputForm"
                                       data-prevent-drop-up="true"
@@ -78,7 +78,7 @@
                         {{ 'functions:CONFIGMAP_KEY' | i18next }}:
                     </span>
                 </label>
-                <igz-validating-input-field class="nuclio-validating-input input-value-key"
+                <igz-validating-input-field class="input-value-key"
                                             data-field-type="input"
                                             data-input-name="value-key"
                                             data-input-value="$ctrl.getInputKey()"
@@ -97,7 +97,7 @@
                                  'only-value-input': $ctrl.onlyValueInput,
                                  'only-key-value-input': $ctrl.isVisibleByType('value'),
                                  'all-value-types': $ctrl.allValueTypes}">
-                <label data-ng-if="$ctrl.useLabels">
+                <label data-ng-if="$ctrl.useLabels" class="asterisk">
                     <span data-ng-if="$ctrl.isVisibleByType('value')">
                         {{ 'common:VALUE' | i18next }}:
                     </span>
@@ -108,7 +108,7 @@
                         {{ 'functions:CONFIGMAP_NAME' | i18next }}:
                     </span>
                 </label>
-                <igz-validating-input-field class="nuclio-validating-input input-value"
+                <igz-validating-input-field class="input-value"
                                             data-field-type="input"
                                             data-input-name="value"
                                             data-input-value="$ctrl.getInputValue()"
@@ -125,7 +125,7 @@
                                             data-tooltip-placement="bottom"
                                             data-tooltip-popup-delay="100">
                 </igz-validating-input-field>
-                <igz-validating-input-field class="nuclio-validating-input input-additional-value"
+                <igz-validating-input-field class="input-additional-value"
                                             data-ng-if="$ctrl.useAdditionalValue && $ctrl.isVisibleByType('value')"
                                             data-field-type="input"
                                             data-input-name="additionalValue"
