Impl [igzValidatingInputField] Add `tooltip` attribute + more
- `tooltip` attribute takes an object with `text`, `placement` and
  `duration` properties. When `text` is empty no tooltip will open.
- Hide validation icon whenever `readOnly` attribute is true.
- Show borders when `bordersMode` is `'hover'` or `'focus'` when
  placeholder is shown.
- Add ellipsis "..." when input text overflows.
- Turn `enterCallback` attribute from `<` to `@`.
- Fix: password validation rule test are broken
- Pass `autocomplete` and `spellcheck` for password type, too, not
  only for `input`.
- Fix JSDoc for `compareInputValue` & `onlyValidCharacters` attributes.

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -90,7 +90,7 @@
         outline: transparent none 0;
         box-shadow: none;
 
-        &:read-only, &.borders-hover, &.borders-focus {
+        &:read-only, &.borders-hover:not(:placeholder-shown), &.borders-focus:not(:placeholder-shown) {
             border-color: transparent;
         }
 
@@ -120,6 +120,8 @@
     .input-field {
         padding: 0 10px;
         height: 36px;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         &.with-icon {
             padding: 0 10px 0 32px;
