--- a/src/igz_controls/components/action-item/action-item.tpl.html
+++ b/src/igz_controls/components/action-item/action-item.tpl.html
@@ -5,6 +5,7 @@
      'divider': $ctrl.action.id === 'divider'}"
      data-ng-click="$ctrl.onClickAction($event)"
      data-ng-if="$ctrl.template !== 'additional'"
+     data-test-id="{{$ctrl.action.testId}}"
      data-uib-tooltip="{{$ctrl.getTooltipText()}}"
      data-tooltip-popup-delay="1000"
      data-tooltip-placement="bottom"
