[General] Use validation rules instead of patterns

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -124,7 +124,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
-                                            data-validation-rules="$ctrl.validationRules['containerName']"
+                                            data-validation-rules="$ctrl.validationRules.containerName"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_CONTAINER_NAME' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.container"
@@ -145,7 +145,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="false"
-                                            data-validation-max-length="255"
+                                            data-validation-max-length="{{$ctrl.maxLengths.containerSubPath}}"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_PATH_IN_CONTAINER' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.subPath"
@@ -275,7 +275,7 @@
                                             data-input-value="$ctrl.getAttrValue(attribute.name)"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.getValidationPattern(attribute.pattern)"
+                                            data-validation-rules="$ctrl.attributesValidationRules[attribute.pattern]"
                                             data-validation-is-required="!attribute.allowEmpty"
                                             data-placeholder-text="{{$ctrl.getPlaceholderText(attribute)}}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -328,7 +328,7 @@
                                             data-input-value="$ctrl.item.username"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.stringValidationPattern"
+                                            data-validation-rules="$ctrl.attributesValidationRules.string"
                                             data-validation-is-required="false"
                                             data-placeholder-text="{{ 'common:PLACEHOLDER.ENTER_USERNAME' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -343,7 +343,7 @@
                                             data-input-value="$ctrl.item.password"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.stringValidationPattern"
+                                            data-validation-rules="$ctrl.attributesValidationRules.string"
                                             data-validation-is-required="false"
                                             data-placeholder-text="{{ 'common:PLACEHOLDER.ENTER_PASSWORD' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -370,7 +370,7 @@
                                             data-input-value="$ctrl.item.attributes.sasl.user"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.stringValidationPattern"
+                                            data-validation-rules="$ctrl.attributesValidationRules.string"
                                             data-validation-is-required="false"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_SASL_USERNAME' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -385,7 +385,7 @@
                                             data-input-value="$ctrl.item.attributes.sasl.password"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.stringValidationPattern"
+                                            data-validation-rules="$ctrl.attributesValidationRules.string"
                                             data-validation-is-required="false"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_SASL_PASSWORD' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -400,7 +400,7 @@
                                             data-input-value="$ctrl.item.attributes.event.body"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-pattern="$ctrl.stringValidationPattern"
+                                            data-validation-rules="$ctrl.attributesValidationRules.string"
                                             data-validation-is-required="false"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_EVENT_BODY' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
@@ -555,7 +555,7 @@
                                              data-use-type="false"
                                              data-submit-on-fly="true"
                                              data-item-index="$index"
-                                             data-value-validation-pattern="$ctrl.subscriptionQoSValidationPattern"
+                                             data-validation-rules="$ctrl.attributesValidationRules.subscriptionQoS"
                                              data-value-placeholder="0, 1 or 2"
                                              data-action-handler-callback="$ctrl.handleSubscriptionAction(actionType, index)"
                                              data-change-data-callback="$ctrl.onChangeData(newData, index)">
@@ -585,7 +585,7 @@
                                              data-submit-on-fly="true"
                                              data-item-index="$index"
                                              data-only-value-input="true"
-                                             data-value-validation-pattern="$ctrl.stringValidationPattern"
+                                             data-validation-rules="$ctrl.attributesValidationRules.string"
                                              data-action-handler-callback="$ctrl.handleTopicAction(actionType, index)"
                                              data-change-data-callback="$ctrl.onChangeData(newData, index)">
                         </ncl-key-value-input>
@@ -614,7 +614,7 @@
                                              data-submit-on-fly="true"
                                              data-item-index="$index"
                                              data-only-value-input="true"
-                                             data-value-validation-pattern="$ctrl.stringValidationPattern"
+                                             data-validation-rules="$ctrl.attributesValidationRules.string"
                                              data-action-handler-callback="$ctrl.handleBrokerAction(actionType, index)"
                                              data-change-data-callback="$ctrl.onChangeData(newData, index)">
                         </ncl-key-value-input>
