Impl [Nuclio] Warn when Request is empty while Limit is filled

--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -143,3 +143,9 @@ ul, ol {
     left: 0;
     background-color: @modal-backgrop-bg-color;
 }
+
+.hint-text {
+    .general-rules-color-set();
+
+    color: @hint-text-color;
+}
