Fix [Nuclio] Function "View YAML": no syntax highlighting

--- a/src/nuclio/common/components/function-config-dialog/function-config-dialog.tpl.html
+++ b/src/nuclio/common/components/function-config-dialog/function-config-dialog.tpl.html
@@ -9,7 +9,7 @@
                     data-function-source-code="$ctrl.sourceCode"
                     data-mini-monaco="false"
                     data-selected-theme="$ctrl.editorTheme"
-                    data-language="yaml"
+                    data-language="'yaml'"
                     data-read-only="true">
         </ncl-monaco>
     </div>
