Impl [Tooltips] For chart tooltips: align values to the right

--- a/src/igz_controls/less/tooltips.less
+++ b/src/igz_controls/less/tooltips.less
@@ -29,6 +29,10 @@
                 min-width: 56px;
                 margin-right: 16px;
             }
+
+            .series-value {
+                margin-left: auto;
+            }
         }
 
         .tooltip-header {
