Fix [igzValidatingInputField] Textarea: char counter misplaced

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -66,7 +66,7 @@
         line-height: 32px;
         position: absolute;
         right: 6px;
-        top: 30px;
+        bottom: -28px;
         z-index: 3;
 
         &.invalid {
