--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -58,6 +58,8 @@
         display: flex;
 
         .checkbox-block {
+            display: inline-flex;
+            align-items: baseline;
             margin-right: 15px;
         }
     }
