Impl [Nuclio][Triggers] V3IO stream: URL, container name UX
- Swap places between Container Name and URL.
- Both fields are always displayed and mandatory.
- When selecting an option in Container Name dropdown the URL is set
  to the default value that comes from /api/frontend_spec

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -239,6 +239,7 @@
                         data-ng-if="field.moreInfoDescription"
                         data-description="{{field.moreInfoDescription}}"
                         data-icon-type="{{field.moreInfoIconType}}"
+                        data-is-html-enabled="field.moreInfoHtml"
                         data-is-open="field.moreInfoOpen"
                         data-trigger="click">
                     </igz-more-info>
